--- a/po/fi_FI/menu.po
+++ b/po/fi_FI/menu.po
@@ -18,9 +18,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-14 06:08+0000\n"
-"Last-Translator: Tukea <nokoa@live.fi>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Finnish (http://www.transifex.com/civicrm/civicrm/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -137,8 +137,8 @@ msgid "Case Activity"
 msgstr "Tapauksen aktiviteetit"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Tapahtumaraportti"
+msgid "Case Activity Audit"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -157,7 +157,7 @@ msgid "Assign to Another Client"
 msgstr "Siirrä toiselle asiakkaalle"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
+msgid "File on Case"
 msgstr ""
 
 msgctxt "menu"
@@ -182,10 +182,6 @@ msgstr "Tapauksien tilat"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr ""
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "Muuta aktiviteetin tilaa"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -260,6 +256,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "Taloudelliset tyypit"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr ""
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -277,9 +277,15 @@ msgstr "Hyväksytyt luottokortit"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Avustukset"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "Toistuvat lahjoitukset"
@@ -330,6 +336,23 @@ msgstr "Joukkokirjanpito"
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr ""
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr ""
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "PDF-lasku"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "Lähetä lasku sähköpostilla"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -483,6 +506,11 @@ msgstr "Hakuasetukset"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Navigointivalikko"
 
@@ -516,10 +544,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Ajasta muistutukset"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "Tämän ei pitäisi koskaan näkyä"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -537,6 +561,11 @@ msgstr "Tulostettavan sivun (PDF) muodot"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Sähköpostitervehdysten muodot"
 
@@ -550,9 +579,10 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Osoitteen haltijan muotoilut"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
-msgstr "Kielet, valuutta, sijainti"
+msgid "Languages, Currency, Locations"
+msgstr "Kielet, valuutta, sijainnit"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -703,10 +733,6 @@ msgid "Administer CiviCRM"
 msgstr "CiviCRM-hallinnointi"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Vaihtoehtoisia arvoja"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Hinnat"
 
@@ -774,10 +800,6 @@ msgstr "Hakujen määrittely"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Räätälöidyt haut"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Yksinkertainen haku"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -869,6 +891,10 @@ msgid "CiviCRM Blog"
 msgstr "CiviCRM-blogi"
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "Tapauksen työpöytävimpain"
 
@@ -923,6 +949,10 @@ msgid "Import Activities"
 msgstr "Tuo tapahtumia"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr ""
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Päivitä CiviCRM"
 
@@ -959,12 +989,16 @@ msgid "Browse Uploaded files"
 msgstr "Selaa ladattuja tiedostoja"
 
 msgctxt "menu"
-msgid "Delete file"
-msgstr "Poista tiedosto"
+msgid "Delete File"
+msgstr ""
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Kirjaudu Ulos"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -978,6 +1012,10 @@ msgstr "QUnit"
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr "Profiilin muokkain"
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr ""
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1074,6 +1112,10 @@ msgid "Event Online Registration"
 msgstr "Tapahtuman verkkoilmoittautuminen"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr ""
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Konferenssipaikat"
 
@@ -1107,6 +1149,10 @@ msgstr "Poista ostoskorista"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "Näytä ostoskori"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr ""
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1161,8 +1207,8 @@ msgid "Resubscribe"
 msgstr "Aktivoi uudelleen"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "Lähetyskielto"
+msgid "Opt-out"
+msgstr ""
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1297,6 +1343,11 @@ msgstr "Listaa raportit"
 msgctxt "menu"
 msgid "CiviCRM News"
 msgstr "CiviCRM-uutiset"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1435,6 +1486,16 @@ msgstr "Etsi ryhmätekstiviesti"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "Jäsenyysraportit"
 
@@ -1540,11 +1601,6 @@ msgstr "Lokalisointi"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Kielet, valuutta, sijainnit"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Toivottujen kielten valinta"
 
@@ -1562,6 +1618,11 @@ msgstr "Oikeudet (käyttöoikeuksien valvonta)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Järjestelmän asetukset"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1630,6 +1691,11 @@ msgstr "CiviAvustus"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviJäsenyys"
 
@@ -1640,8 +1706,13 @@ msgstr "Kaikki raportit"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Ohje"
+msgid "Support"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1650,18 +1721,43 @@ msgstr "Dokumentaatio"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Yhteisön keskustelupalstat"
+msgid "Ask a question"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Osallistu"
+msgid "Get expert help"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "Tietoa"
+msgid "About CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1888,6 +1984,11 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "Yhteenveto jäsenyydestä"
 
@@ -2057,144 +2158,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr "Yksityiskohtainen raportti esittelypöytää, puhelinhaastatteluja, ovelta ovelle -listoja ja muita haastattelumuotoja varten."
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Case Activity Audit"
+msgid "Payment Methods"
 msgstr ""
 
 msgctxt "menu"
-msgid "New Payment"
+msgid "Configure CKEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
+
+msgctxt "menu"
+msgid "Insert CiviCRM Content"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr ""
-
-msgctxt "menu"
-msgid "View Payment"
+msgid "System Status"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Communication Style Options"
-msgstr ""
-
-msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr ""
-
-msgctxt "menu"
-msgid "Change Registration Selections"
+msgid "Components"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Grant Status"
+msgid "Extensions"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer"
+msgid "Activity Details"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "API Explorer"
+msgid "Activity Summary"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer Docs"
-msgstr ""
-
-msgctxt "menu"
-msgid "File on Case"
+msgid "Shows activity statistics by type / date"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr ""
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "PDF-lasku"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "Lähetä lasku sähköpostilla"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Date Preferences"
-msgstr ""
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr ""
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr ""
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr ""
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr ""
-
-msgctxt "menu"
-msgid "Opt-out"
+msgid "Pledge Detail"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "New A/B Test"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get started"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Ask a question"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
 msgstr ""
