--- a/po/fr_CA/grant.po
+++ b/po/fr_CA/grant.po
@@ -11,11 +11,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-04-25 21:37+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
-"Language-Team: French (Canada) (http://www.transifex.com/projects/p/civicrm/"
-"language/fr_CA/)\n"
+"Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -41,14 +40,6 @@ msgstr "Date d'échéance de la subvention est NULL."
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date is NULL"
 msgstr "Date de la décision de la subvention est NULL."
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Type %2 %1"
-msgstr "Type de subvention %2 '%1'"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Status %2 %1"
-msgstr "Statut de la subvention %2 '%1'"
 
 #: CRM/Grant/BAO/Query.php
 msgid "App. Received Date - From"
@@ -95,10 +86,6 @@ msgid "Grant report received"
 msgstr "Rapport de subvention reçu"
 
 #: CRM/Grant/DAO/Grant.php
-msgid "Grant Type Id"
-msgstr "ID du type de subvention"
-
-#: CRM/Grant/DAO/Grant.php
 msgid "Amount granted"
 msgstr "Montant octroyé"
 
@@ -110,10 +97,6 @@ msgstr ""
 msgid "Grant Rationale"
 msgstr ""
 
-#: CRM/Grant/DAO/Grant.php
-msgid "Grant Status Id"
-msgstr "ID du statut de la subvention"
-
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
 msgstr "Rapport de subvention reçu ?"
@@ -121,6 +104,10 @@ msgstr "Rapport de subvention reçu ?"
 #: CRM/Grant/Form/Grant.php
 msgid "Amount Requested<br />(original currency)"
 msgstr "Montant requis<br />(devise initiale)"
+
+#: CRM/Grant/Form/Grant.php
+msgid "Applicant"
+msgstr ""
 
 #: CRM/Grant/Form/Search.php
 msgid "Find Grants"
@@ -131,12 +118,10 @@ msgid "Delete Grants"
 msgstr "Supprimer les subventions"
 
 #: CRM/Grant/Form/Task/Delete.php
-msgid "Deleted Grant(s): %1"
-msgstr "Subvention(s) supprimée(s): %1"
-
-#: CRM/Grant/Form/Task/Delete.php CRM/Grant/Form/Task/Update.php
-msgid "Total Selected Grant(s): %1"
-msgstr "Total des subvention(s) sélectionnée(s) : %1"
+msgid "%count grant deleted."
+msgid_plural "%count grants deleted."
+msgstr[0] ""
+msgstr[1] ""
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
@@ -147,218 +132,8 @@ msgid "Update Grants"
 msgstr "Mettre à jour les subventions"
 
 #: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1"
-msgstr "Subvention(s) mise(s) à jour : %1"
-
-#: CRM/Grant/Page/DashBoard.php
-msgid "grants"
-msgstr "Subventions"
-
-#: CRM/Grant/Page/Tab.php
-msgid "Grant by"
-msgstr "Subvention par"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/GrantView.tpl
-msgid "View Grant"
-msgstr "Voir les subventions"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
-msgid "Edit Grant"
-msgstr "Modifier la subvention"
-
-#: CRM/Grant/Selector/Search.php
-msgid "Are you sure you want to delete this grant?"
-msgstr "Voulez vous modifier cette étiquette?"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
-msgid "Delete Grant"
-msgstr "Supprimer la subvention"
-
-#: CRM/Grant/Selector/Search.php
-msgid "Requested"
-msgstr "Sollicité"
-
-#: CRM/Grant/Selector/Search.php
-msgid "Granted"
-msgstr ""
-
-#: CRM/Grant/Task.php
-msgid "Print Grants"
-msgstr "Imprimer les subventions"
-
-#: CRM/Grant/Task.php
-msgid "Export Grants"
-msgstr "Exporter les subventions"
-
-#: templates/CRM/Grant/Form/Grant.tpl
-msgid "New Grant"
-msgstr "Nouvelle subvention"
-
-#: templates/CRM/Grant/Form/Grant.tpl
-msgid "Are you sure you want to delete this Grant?"
-msgstr "Êtes-vous sûr de vouloir supprimer cette subvention ?"
-
-#: templates/CRM/Grant/Form/Grant.tpl
-msgid "Amount requested for grant in original currency (if different)."
-msgstr ""
-"Montant demandé pour une subvention dans la devise courante (si différent)."
-
-#: templates/CRM/Grant/Form/Grant.tpl templates/CRM/Grant/Form/Task/Update.tpl
-msgid "Date on which the grant decision was finalized."
-msgstr "Date à laquelle la décision de subvention a été finalisée :"
-
-#: templates/CRM/Grant/Form/Grant.tpl
-msgid "Date on which the grant money was transferred."
-msgstr "Date à laquelle l'argent de la subventin a été transféré"
-
-#: templates/CRM/Grant/Form/GrantView.tpl
-msgid "(original currency)"
-msgstr "(devise initiale)"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Date is not set"
-msgstr "La date n'est pas paramétrée"
-
-#: templates/CRM/Grant/Form/Search/EmptyResults.tpl
-msgid "if you are searching by Contact name, check your spelling"
-msgstr "si vous cherchez par nom de contact, vérifiez l'orthographe"
-
-#: templates/CRM/Grant/Form/Search.tpl
-msgid ""
-"Use this form to find Grant(s) by Contact name, Grant Status, Grant Type, "
-"Total Amount , etc ."
-msgstr ""
-"Utilisez ce formulaire pour trouver une(des) subvention(s) par le nom de "
-"contact, le status de la subvention, le type de subvention, le montant "
-"total, ..."
-
-#: templates/CRM/Grant/Form/Selector.tpl
-msgid "List more Grants"
-msgstr "Lister plus de subventions"
-
-#: templates/CRM/Grant/Form/Task/Delete.tpl
-msgid ""
-"Are you sure you want to delete the selected Grants? This delete operation "
-"cannot be undone and will delete all transactions associated with these "
-"grants."
-msgstr ""
-"Êtes-vous sûr de vouloir supprimer les subventions sélectionnées? Cette "
-"opération ne peut pas être annulée et effacera toutes les transactions "
-"associées à ces subventions."
-
-#: templates/CRM/Grant/Form/Task/Print.tpl
-msgid "Amount Requested(orig. currency)"
-msgstr "Montant sollicité (devise initiale)"
-
-#: templates/CRM/Grant/Form/Task/Print.tpl
-msgid "Application Recieved"
-msgstr "Application reçue"
-
-#: templates/CRM/Grant/Form/Task/SearchTaskHookSample.tpl
-msgid "Decision Date"
-msgstr "Date de la décision"
-
-#: templates/CRM/Grant/Form/Task/Update.tpl
-msgid ""
-"Enter values for the fields you wish to update. Leave fields blank to "
-"preserve existing values."
-msgstr ""
-"Entrez des valeurs pour les champs que vous désirez mettre à jour. Laissez "
-"vides les autres champs afin de conserver leurs valeurs existantes."
-
-#: templates/CRM/Grant/Form/Task/Update.tpl templates/CRM/Grant/Form/Task.tpl
-msgid "Number of selected grants: %1"
-msgstr "Nombre de subventions sélectionnées : %1"
-
-#: templates/CRM/Grant/Page/DashBoard.tpl
-msgid ""
-"CiviGrant allows you to input and track grants to Organizations, Individuals "
-"or Households. The grantee must first be entered as a contact in CiviCRM. "
-"Use <a href='%1'>Find Contacts</a> to see if there's already a record for "
-"the grantee. Once you've located or created the contact record, click "
-"<strong>View</strong> to go to their summary page, select the "
-"<strong>Grants</strong> tab and click <strong>New Grant</strong>."
-msgstr ""
-"CiviGrant vous permet de saisir et de suivre les subventions aux organismes, "
-"individus ou les foyers. Le bénéficiaire doit d'abord être inscrit comme un "
-"contact dans CiviCRM. Utilisez <a href='%1'> trouver des contacts </a> pour "
-"voir si il ya déjà un enregistrement pour le bénéficiaire. Une fois que vous "
-"avez créés ou trouvé l'enregistrement de contact, cliquez sur <strong> "
-"Affichage </strong> pour accéder à leur page de résumé, sélectionnez "
-"l'option <strong> subventions </strong> et cliquez sur <strong> nouvelle "
-"subvention </strong>."
-
-#: templates/CRM/Grant/Page/DashBoard.tpl
-msgid "Grants Summary"
-msgstr "Résumé des subventions"
-
-#: templates/CRM/Grant/Page/DashBoard.tpl
-msgid ""
-"This table provides a summary of <strong>Grant Totals</strong>, and includes "
-"shortcuts to view the Grant details for these commonly used search periods. "
-"Click the Grant Status to see a list of Contacts for that grant status. To "
-"run your own customized searches - click <a href='%1'>Find Grants</a>. You "
-"can search by Contact Name, Amount, Grant type and a variety of other "
-"criteria."
-msgstr ""
-"Ce tableau fournit un résumé des <strong> Totaux des subventions</strong>, "
-"et inclut des raccourcis pour afficher les détails des subventions pour ces "
-"périodes de recherche couramment utilisées . Cliquez sur le statut de la "
-"subvention pour voir une liste de contacts pour ce statut de subvention. "
-"Pour exécuter vos propres recherches personnalisées - cliquez sur <a "
-"href='%1'> Trouvez subventions </a>. Vous pouvez effectuer une recherche par "
-"nom de contact, le montant, le type de subvention et une variété d'autres "
-"critères."
-
-#: templates/CRM/Grant/Page/DashBoard.tpl
-msgid "Number of grants"
-msgstr "Nombre de subventions"
-
-#: templates/CRM/Grant/Page/DashBoard.tpl
-msgid "TOTAL"
-msgstr "Total"
-
-#: templates/CRM/Grant/Page/DashBoard.tpl
-msgid "You have no Grants registered in your database."
-msgstr "Aucune subvention enregistrée dans votre base de donnée"
-
-#: templates/CRM/Grant/Page/DashBoard.tpl
-msgid "Recent Grants"
-msgstr "Subventions récentes"
-
-#: templates/CRM/Grant/Page/Tab.tpl
-msgid "This page lists all grants for %1 since inception."
-msgstr "Cette page liste toutes les subventions pour %1 depuis le début."
-
-#: templates/CRM/Grant/Page/Tab.tpl
-msgid ""
-"Click <a accesskey='N' href='%1'>Add Grant</a> to record a Grant for this "
-"contact."
-msgstr ""
-"Cliquez <a accesskey='N' href='%1'>Nouvelle subvention</a> afin "
-"d'enregistrer une subvention pour ce contact."
-
-#: templates/CRM/Grant/Page/Tab.tpl
-msgid "No grants have been recorded for this contact."
-msgstr "Aucune subvention n'a été enregistrée pour ce contact."
-
-#: CRM/Grant/Form/Grant.php
-msgid "Applicant"
-msgstr ""
-
-#: CRM/Grant/Form/Task/Update.php
 msgid "Updated Grant(s): %1 (Total Selected: %2)"
 msgstr ""
-
-#: templates/CRM/Grant/Page/Tab.tpl
-msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr ""
-
-#: CRM/Grant/Form/Task/Delete.php
-msgid "%count grant deleted."
-msgid_plural "%count grants deleted."
-msgstr[0] ""
-msgstr[1] ""
 
 #: CRM/Grant/Info.php
 msgid "access CiviGrant"
@@ -384,10 +159,165 @@ msgstr ""
 msgid "Delete grants"
 msgstr ""
 
+#: CRM/Grant/Page/DashBoard.php
+msgid "grants"
+msgstr "Subventions"
+
+#: CRM/Grant/Selector/Search.php
+msgid "View Grant"
+msgstr "Voir les subventions"
+
+#: CRM/Grant/Selector/Search.php
+msgid "Edit Grant"
+msgstr "Modifier la subvention"
+
+#: CRM/Grant/Selector/Search.php
+msgid "Delete Grant"
+msgstr "Supprimer la subvention"
+
+#: CRM/Grant/Selector/Search.php
+msgid "Requested"
+msgstr "Sollicité"
+
+#: CRM/Grant/Selector/Search.php
+msgid "Granted"
+msgstr ""
+
+#: CRM/Grant/Task.php
+msgid "Export Grants"
+msgstr "Exporter les subventions"
+
+#: templates/CRM/Grant/Form/Grant.tpl
+msgid "Are you sure you want to delete this Grant?"
+msgstr "Êtes-vous sûr de vouloir supprimer cette subvention ?"
+
+#: templates/CRM/Grant/Form/Grant.tpl
+msgid "Amount requested for grant in original currency (if different)."
+msgstr "Montant demandé pour une subvention dans la devise courante (si différent)."
+
+#: templates/CRM/Grant/Form/Grant.tpl templates/CRM/Grant/Form/Task/Update.tpl
+msgid "Date on which the grant decision was finalized."
+msgstr "Date à laquelle la décision de subvention a été finalisée :"
+
+#: templates/CRM/Grant/Form/Grant.tpl
+msgid "Date on which the grant money was transferred."
+msgstr "Date à laquelle l'argent de la subventin a été transféré"
+
+#: templates/CRM/Grant/Form/GrantView.tpl
+msgid "(original currency)"
+msgstr "(devise initiale)"
+
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Status(s)"
 msgstr ""
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Type(s)"
+msgstr ""
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Date is not set"
+msgstr "La date n'est pas paramétrée"
+
+#: templates/CRM/Grant/Form/Search/EmptyResults.tpl
+msgid "if you are searching by Contact name, check your spelling"
+msgstr "si vous cherchez par nom de contact, vérifiez l'orthographe"
+
+#: templates/CRM/Grant/Form/Search.tpl
+msgid ""
+"Use this form to find Grant(s) by Contact name, Grant Status, Grant Type, "
+"Total Amount , etc ."
+msgstr "Utilisez ce formulaire pour trouver une(des) subvention(s) par le nom de contact, le status de la subvention, le type de subvention, le montant total, ..."
+
+#: templates/CRM/Grant/Form/Selector.tpl
+msgid "List more Grants"
+msgstr "Lister plus de subventions"
+
+#: templates/CRM/Grant/Form/Task/Delete.tpl
+msgid ""
+"Are you sure you want to delete the selected Grants? This delete operation "
+"cannot be undone and will delete all transactions associated with these "
+"grants."
+msgstr "Êtes-vous sûr de vouloir supprimer les subventions sélectionnées? Cette opération ne peut pas être annulée et effacera toutes les transactions associées à ces subventions."
+
+#: templates/CRM/Grant/Form/Task/Print.tpl
+msgid "Amount Requested(orig. currency)"
+msgstr "Montant sollicité (devise initiale)"
+
+#: templates/CRM/Grant/Form/Task/Print.tpl
+msgid "Application Recieved"
+msgstr "Application reçue"
+
+#: templates/CRM/Grant/Form/Task/SearchTaskHookSample.tpl
+msgid "Decision Date"
+msgstr "Date de la décision"
+
+#: templates/CRM/Grant/Form/Task/Update.tpl
+msgid ""
+"Enter values for the fields you wish to update. Leave fields blank to "
+"preserve existing values."
+msgstr "Entrez des valeurs pour les champs que vous désirez mettre à jour. Laissez vides les autres champs afin de conserver leurs valeurs existantes."
+
+#: templates/CRM/Grant/Form/Task/Update.tpl templates/CRM/Grant/Form/Task.tpl
+msgid "Number of selected grants: %1"
+msgstr "Nombre de subventions sélectionnées : %1"
+
+#: templates/CRM/Grant/Page/DashBoard.tpl
+msgid ""
+"CiviGrant allows you to input and track grants to Organizations, Individuals"
+" or Households. The grantee must first be entered as a contact in CiviCRM. "
+"Use <a href='%1'>Find Contacts</a> to see if there's already a record for "
+"the grantee. Once you've located or created the contact record, click "
+"<strong>View</strong> to go to their summary page, select the "
+"<strong>Grants</strong> tab and click <strong>New Grant</strong>."
+msgstr "CiviGrant vous permet de saisir et de suivre les subventions aux organismes, individus ou les foyers. Le bénéficiaire doit d'abord être inscrit comme un contact dans CiviCRM. Utilisez <a href='%1'> trouver des contacts </a> pour voir si il ya déjà un enregistrement pour le bénéficiaire. Une fois que vous avez créés ou trouvé l'enregistrement de contact, cliquez sur <strong> Affichage </strong> pour accéder à leur page de résumé, sélectionnez l'option <strong> subventions </strong> et cliquez sur <strong> nouvelle subvention </strong>."
+
+#: templates/CRM/Grant/Page/DashBoard.tpl
+msgid "Grants Summary"
+msgstr "Résumé des subventions"
+
+#: templates/CRM/Grant/Page/DashBoard.tpl
+msgid ""
+"This table provides a summary of <strong>Grant Totals</strong>, and includes"
+" shortcuts to view the Grant details for these commonly used search periods."
+" Click the Grant Status to see a list of Contacts for that grant status. To "
+"run your own customized searches - click <a href='%1'>Find Grants</a>. You "
+"can search by Contact Name, Amount, Grant type and a variety of other "
+"criteria."
+msgstr "Ce tableau fournit un résumé des <strong> Totaux des subventions</strong>, et inclut des raccourcis pour afficher les détails des subventions pour ces périodes de recherche couramment utilisées . Cliquez sur le statut de la subvention pour voir une liste de contacts pour ce statut de subvention. Pour exécuter vos propres recherches personnalisées - cliquez sur <a href='%1'> Trouvez subventions </a>. Vous pouvez effectuer une recherche par nom de contact, le montant, le type de subvention et une variété d'autres critères."
+
+#: templates/CRM/Grant/Page/DashBoard.tpl
+msgid "Number of grants"
+msgstr "Nombre de subventions"
+
+#: templates/CRM/Grant/Page/DashBoard.tpl
+msgid "TOTAL"
+msgstr "Total"
+
+#: templates/CRM/Grant/Page/DashBoard.tpl
+msgid "You have no Grants registered in your database."
+msgstr "Aucune subvention enregistrée dans votre base de donnée"
+
+#: templates/CRM/Grant/Page/DashBoard.tpl
+msgid "Recent Grants"
+msgstr "Subventions récentes"
+
+#: templates/CRM/Grant/Page/Tab.tpl
+msgid "This page lists all grants for %1 since inception."
+msgstr "Cette page liste toutes les subventions pour %1 depuis le début."
+
+#: templates/CRM/Grant/Page/Tab.tpl
+msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
+msgstr ""
+
+#: templates/CRM/Grant/Page/Tab.tpl
+msgid "No grants have been recorded for this contact."
+msgstr "Aucune subvention n'a été enregistrée pour ce contact."
+
+#: CRM/Grant/Task.php
+msgid "Export grants"
+msgstr ""
+
+#: CRM/Grant/Task.php
+msgid "Update grants"
 msgstr ""
